--- a/src/assets/sass/scss/About.scss
+++ b/src/assets/sass/scss/About.scss
@@ -1,5 +1,6 @@
 .about {
     margin: 180px auto;
+
     &_box {
         display: flex;
         flex-direction: column;
@@ -25,7 +26,8 @@
                 font-family: var(--o400);
                 font-size: 24px;
                 color: #212121;
-                &:nth-child(3){
+
+                &:nth-child(3) {
                     margin-top: 40px;
                 }
             }
@@ -35,6 +37,7 @@
 
     .about_img_box {
         display: grid;
+        align-self: center;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 30px;
@@ -45,4 +48,5 @@
             }
         }
     }
+
 }
