--- a/src/assets/sass/common/media.scss
+++ b/src/assets/sass/common/media.scss
@@ -527,6 +527,7 @@
                 border-radius: 0 0 0 20px;
                 padding: 0 20px;
                 z-index: 9999;
+                padding-top: 80px;
 
                 &.active {
                     z-index: 9999;
